--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     flex-direction: column;
     width: 100%;
   }
+ 
   .social-handles {
     display: block;
     width: 100%;
@@ -42,11 +43,51 @@
  
     width: 100% !important;
   }
- }
+ }  
 
+ .social-text {
+  font-weight: bold; 
+  color: #333;
+  font-size: 18px; 
+  align-self: start;
+}
 
+.social-handles a{
+  text-decoration: none;
+  padding: 20px;
+  border-radius: 10%;
+  margin-top: 20px;
+  justify-content :space-evenly;
+  align-items : center
+}
 
+.social-handles a i{
+   font-size: 3em;
+   opacity: 0.9;
+  
+}
 
+.instagram-icon .fa-instagram {
+  color: #f01048;
+}
+
+.facebook-icon .fa-facebook {
+  color: #0d6ce9;
+}
+
+.youtube-icon {
+  color:#f01010
+}
+
+.social-handles a:hover{
+  background-color: rgb(229, 243, 242);
+  transition: 0.5s;
+}
+
+.social-handles a:hover i{
+  color:white;
+  transition: 0.5s;
+} 
 
 
 
