--- a/style.css
+++ b/style.css
@@ -119,23 +119,24 @@ body {
   }
 
 }
+
+.spaced-paragraph::before {
+  content: " "; /* Insert a space before the words */
+}
  
-    width: 100% !important;
-  }
- }  
 
  .social-text {
   font-weight: bold; 
   color: #333;
-  font-size: 18px; 
+  font-size: 20px; 
   align-self: start;
 }
 
 .social-handles a{
-  text-decoration: none;
-  padding: 20px;
-  border-radius: 10%;
-  margin-top: 20px;
+  display: inline-block;
+  padding: 10px 10px;
+  border-radius: 5%;
+  margin: 30px;
   justify-content :space-evenly;
   align-items : center
 }
@@ -167,6 +168,3 @@ body {
   color:white;
   transition: 0.5s;
 } 
-
-
-
