--- a/style.css
+++ b/style.css
@@ -8,6 +8,13 @@ body {
   box-sizing: content-box;
   font-family: "Poppins", sans-serif;
 }
+
+hr {
+  color: blue;
+  height: 2px;
+  border-width: 0;
+  background-color: blue;
+}
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 /* @media only screen and (min-width: 1200px) { } */
 
